<resources>
    <string name="app_name">OSKFin</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up" translatable="false">SignUpActivity</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="password">Password</string>
    <string name="repeat_the_password">Repeat the Password</string>
    <string name="cancel_button">Cancel</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="error_empty">Enter All Data</string>
    <string name="error_password_dont_match">Passwords don\'t match</string>
    <string name="sign_up">SIGN UP</string>
    <string name="registration_ok">Successful registration</string>
    <string name="fill_in_all_fields_with">Fill in all fields</string>
    <string name="invalid_data_to_sign_in">invalid username or password</string>
    <string name="title_activity_main_screen" translatable="false">MainScreenActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_profile">Profile</string>
    <string name="save">Save</string>
    <string name="complete">Complete</string>
    <string name="menu_admin">Administration</string>
    <string name="administration">Administration</string>
    <string name="find">Find</string>
    <string name="selectButton">Select</string>
    <string name="action_sync">Synchronization</string>
    <string name="menu_store">Store</string>
    <string name="no_one_user">There is no such user</string>
    <string name="select_a_delivery_point">Select a delivery point</string>
    <string name="in_game">In Game</string>
    <string name="admin">Admin</string>
    <string name="sender">Sender</string>
    <string name="orders">Orders</string>
    <string name="item">Item</string>
    <string name="point">Point</string>
    <string name="menu_sender">Sender</string>
    <string name="succesfulPurchase">Successful Purchase</string>
    <string name="format_7">Use format 8 (xxx) xxx-xx-xx</string>
    <string name="_8" translatable="false">8</string>
    <string name="add_item">Add item</string>
    <string name="adding">Adding</string>
    <string name="item_name">Item name</string>
    <string name="choose">Choose</string>
    <string name="cost_of_item">Cost of item</string>
    <string name="money">Money</string>
    <string name="choose_image">Choose image</string>
    <string name="uploaded">Uploaded</string>
    <string name="item_list">Item list</string>
    <string name="enter_the_name_and_cost">Enter the name and cost</string>
    <string name="about_item">About item</string>
    <string name="user">Users</string>
    <string name="items">Items</string>
    <string name="points">Points</string>
    <string name="add_point">Add point</string>
    <string name="point_name">Name of point</string>
    <string name="enter_the_point_name">Enter point name</string>
    <string name="not_int">The price must be a number</string>
    <string name="edit">Edit</string>
    <string name="delete_profile">Delete \n profile</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="not_enough_money">You don\'t have enough money</string>
    <string name="inactive_store">While you are not in the game, the store is unavailable.</string>
    <string name="exit">Exit</string>
</resources>
