<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_sender"
            android:icon="@drawable/ic_action_send"
            android:title="@string/menu_sender" />
        <item
            android:id="@+id/nav_store"
            android:icon="@drawable/ic_action_store"
            android:title="@string/menu_store" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_action_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_action_admin"
            android:title="@string/menu_admin" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_menu_exit"
                android:title="@string/exit" />
        </menu>
    </item>
</menu>
