<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_store">

    <fragment
        android:id="@+id/nav_sender"
        android:name="com.oleg.oskfin.ui.sender.SenderFragment"
        android:label="@string/sender"
        tools:layout="@layout/fragment_sender"/>

    <fragment
        android:id="@+id/nav_store"
        android:name="com.oleg.oskfin.ui.store.StoreFragment"
        android:label="@string/menu_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.oleg.oskfin.ui.profile.ProfileFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_admin"
        android:name="com.oleg.oskfin.ui.admin.AdminFragment"
        android:label="@string/menu_admin"
        tools:layout="@layout/fragment_admin" />

    <activity
        android:id="@+id/nav_exit"
        android:name="com.oleg.oskfin.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
</navigation>