<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background_color"
    android:orientation="vertical">

    <TextView
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/adding" />

    <com.rengwuxian.materialedittext.MaterialEditText
app:met_floatingLabelTextColor="#FFFFFF"
        android:id="@+id/add_item_item_name"
        style="@style/SecondTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        app:met_textColorHint="@color/text_light_color"
        android:hint="@string/item_name"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/add_item_image_of_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="start|center_vertical"
            app:srcCompat="@drawable/ic_action_add" />

        <Button
            android:id="@+id/add_item_choose_image"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:text="@string/choose" />
    </RelativeLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
app:met_floatingLabelTextColor="#FFFFFF"
        android:id="@+id/add_item_cost_of_item"
        style="@style/SecondTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:met_textColorHint="@color/text_light_color"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/cost_of_item"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
app:met_floatingLabelTextColor="#FFFFFF"
        android:id="@+id/add_item_about_of_item"
        style="@style/SecondTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:met_textColorHint="@color/text_light_color"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/about_item"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_item_cancel_button"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/add_item_add_button"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/add_item" />
    </LinearLayout>

</LinearLayout>