<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dialog_background_color"
    android:orientation="vertical">

    <TextView
        style="@style/MainText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/adding" />

    <com.rengwuxian.materialedittext.MaterialEditText
app:met_floatingLabelTextColor="#FFFFFF"
        android:id="@+id/add_point_point_name"
        style="@style/SecondTextEdit"
        app:met_textColorHint="@color/text_light_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/point_name"
        android:inputType="textPersonName"
        app:met_floatingLabel="highlight" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_point_cancel_button"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/add_point_add_button"
            style="@style/MyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:text="@string/add_point" />
    </LinearLayout>

</LinearLayout>